Align image width correctly

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Roboto', sans-serif;
     background-color: #1e2129;
 }
 
@@ -7,7 +8,7 @@ body {
     text-align: center;
 }
 
-input {
+input.search-bar {
     border-radius: 50px;
     -webkit-appearance: none;
     border: 1px solid #d6d6d6;
@@ -40,21 +41,24 @@ p.card-text {
     color: #fff;
 }
 
-.movie-item {
+.movie-item-container img {
+    max-width: 280px;
+}
+
+.movie-item-container h6 {
+    font-size: 12px;
+}
+
+.movie-item-container {
+    max-width: 280px;
+    padding: 10px;
+    margin: 20px;
+    max-width: 300px;
+    background: white;
     overflow: hidden;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     -webkit-transition: .25s box-shadow;
     transition: .25s box-shadow;
     margin-bottom: 20px;
-}
-
-.movie-item-container img {
-    max-height: 400px;
-}
-
-.movie-item-container {
-    /* padding: 20px 40px; */
-    max-width: 300px;
-    background: white;
-
   }
+
